--- a/content/guides/spec.adoc
+++ b/content/guides/spec.adoc
@@ -771,6 +771,306 @@ If we have a function `deal` that doles out some cards to the players we can spe
           (total-cards (-> % :ret))))
 ----
 
+== Generators
+
+A key design constraint of spec is that all specs are also designed to act as generators of sample data that conforms to the spec (a critical requirement for property-based testing). 
+
+=== Project Setup
+
+spec generators rely on the Clojure property testing library https://github.com/clojure/test.check[test.check]. However, this dependency is dynamically loaded and you can use the parts of spec other than `gen`, `exercise`, and testing without declaring test.check as a runtime dependency. When you to wish to use these parts of spec (typically during testing), you will need to declare a dev dependency on test.check. 
+
+In Leiningen add this to project.clj:
+
+[source,clojure]
+----
+:profiles {:dev {:dependencies [[org.clojure/test.check "0.9.0"]]}}
+----
+
+In Leiningen the dev profile dependencies are included during testing but not published as a dependency or included in uber jars.
+
+In Boot, add your dependency with test scope in your build.boot file (this is also possible in Leiningen but the approach above is preferred):
+
+[source,clojure]
+----
+(set-env!
+ :dependencies '[[org.clojure/test.check "0.9.0" :scope "test"]])
+----
+
+In Maven, declare your dependency as a test scope dependency:
+
+[source,xml]
+----
+<project>
+  ...
+  <dependencies>
+    <dependency>
+      <groupId>org.clojure</groupId>
+      <artifactId>test.check</artifactId>
+      <version>0.9.0</version>
+      <scope>test</scope>
+    </dependency>
+  </dependency>
+</project>
+----
+
+In your code you also need to include the `clojure.spec.gen` namespace:
+
+[source,clojure]
+----
+(require '[clojure.spec.gen :as gen])
+----
+
+=== Sampling Generators
+
+The http://clojure.github.io/clojure/branch-master/clojure.spec-api.html#clojure.spec/gen[`gen`] function can be used to obtain the generator for any spec.
+
+Once you have obtained a generator with `gen`, there are several ways to use it. You can generate a single sample value with http://clojure.github.io/clojure/branch-master/clojure.spec-api.html#clojure.spec.gen/generate[`generate`] or a series of samples with http://clojure.github.io/clojure/branch-master/clojure.spec-api.html#clojure.spec.gen/sample[`sample`]. Let's see some basic examples:
+
+[source,clojure]
+----
+(gen/generate (s/gen integer?))
+;;=> -959
+(gen/generate (s/gen nil?))
+;;=> nil
+(gen/sample (s/gen string?))
+;;=> ("" "" "" "" "8" "W" "" "G74SmCm" "K9sL9" "82vC")
+(gen/sample (s/gen #{:club :diamond :heart :spade}))
+;;=> (:heart :diamond :heart :heart :heart :diamond :spade :spade :spade :club)
+
+(gen/sample (s/gen (s/cat :k keyword? :ns (s/+ number?))))
+;;=> ((:D -2.0)
+;;=>  (:q4/c 0.75 -1)
+;;=>  (:*!3/? 0)
+;;=>  (:+k_?.p*K.*o!d/*V -3)
+;;=>  (:i -1 -1 0.5 -0.5 -4)
+;;=>  (:?!/! 0.515625 -15 -8 0.5 0 0.75)
+;;=>  (:vv_z2.A??!377.+z1*gR.D9+G.l9+.t9/L34p -1.4375 -29 0.75 -1.25)
+;;=>  (:-.!pm8bS_+.Z2qB5cd.p.JI0?_2m.S8l.a_Xtu/+OM_34* -2.3125)
+;;=>  (:Ci 6.0 -30 -3 1.0)
+;;=>  (:s?cw*8.t+G.OS.xh_z2!.cF-b!PAQ_.E98H4_4lSo/?_m0T*7i 4.4375 -3.5 6.0 108 0.33203125 2 8 -0.517578125 -4))
+----
+
+What about generating a random player in our card game?
+
+[source,clojure]
+----
+(gen/generate (s/gen ::player))
+;;=> {:spec.examples.guide/name "sAt8r6t",
+;;    :spec.examples.guide/score 233843,
+;;    :spec.examples.guide/hand ([8 :spade] [5 :heart] [9 :club] [3 :heart])}
+----
+
+What about generating a whole game?
+
+[source,clojure]
+----
+(gen/generate (s/gen ::game))
+;; it works! but the output is really long, so not including it here
+----
+
+So we can now start with a spec, extract a generator, and generate some data. All generated data will conform to the spec we used as a generator. For specs that have a conformed value different than the original value (anything using s/or, s/cat, s/alt, etc) it can be useful to see a set of generated samples plus the result of conforming that sample data. 
+
+=== Exercise
+
+For this we have http://clojure.github.io/clojure/branch-master/clojure.spec-api.html#clojure.spec.gen/exercise[`exercise`], which returns pairs of generated and conformed values for a spec. `exercise` by default produces 10 samples (like `sample`) but you can pass both functions a number indicating the number of samples to produce.
+
+[source,clojure]
+----
+(s/exercise (s/cat :k keyword? :ns (s/+ number?)) 5)
+;;=>
+;;([(:y -2.0) {:k :y, :ns [-2.0]}]
+;; [(:_/? -1.0 0.5) {:k :_/?, :ns [-1.0 0.5]}]
+;; [(:-B 0 3.0) {:k :-B, :ns [0 3.0]}]
+;; [(:-!.gD*/W+ -3 3.0 3.75) {:k :-!.gD*/W+, :ns [-3 3.0 3.75]}]
+;; [(:_Y*+._?q-H/-3* 0 1.25 1.5) {:k :_Y*+._?q-H/-3*, :ns [0 1.25 1.5]}])
+
+(s/exercise (s/or :k keyword? :s string? :n number?) 5)
+;;=> ([:H [:k :H]] 
+;;    [:ka [:k :ka]]
+;;    [-1 [:n -1]] 
+;;    ["" [:s ""]]
+;;    [-3.0 [:n -3.0]])
+----
+
+=== Using `and` Generators
+
+All of the generators we've seen worked fine but there are a number of cases where they will need some additional help. One common case is when the predicate implicitly presumes values of a particular type but the spec does not specify them:
+
+[source,clojure]
+----
+(gen/generate (s/gen even?))
+;; CompilerException java.lang.Exception: Unable to construct gen at: [] for: clojure.core$even_QMARK_@188fc6fd
+----
+
+In this case spec was not able to find a generator for the `even?` predicate. Most of the primitive generators in spec are mapped to the common type predicates (strings, numbers, keywords, etc).
+
+However, spec is designed to support this case via `and` - the first predicate will determine the generator and subsequent branches will act as filters by applying the predicate to the produced values (using test.check's `such-that`). 
+
+If we modify our predicate to use an `and` and a predicate with a mapped generator, the `even?` can be used as a filter for generated values instead:
+
+[source,clojure]
+----
+(gen/generate (s/gen (s/and integer? even?)))
+;;=> -15161796
+----
+
+We can use many predicates to further refine the generated values. For example, say we only wanted to generate numbers that were positive multiples of 3:
+
+[source,clojure]
+----
+(defn divisible-by [n] #(zero? (mod % n)))
+
+(gen/sample (s/gen (s/and integer?
+                     #(> % 0)
+                     (divisible-by 3))))
+;;=> (3 9 1524 3 1836 6 3 3 927 15027)
+----
+
+However, it is possible to go too far with refinement and make something that fails to produce any values. The test.check http://clojure.github.io/test.check/clojure.test.check.generators.html#var-such-that[`such-that`] that implements the refinement will throw an error if the refinement predicate cannot be resolved within a relatively small number of attempts. For example, consider trying to generate strings that happen to contain the world "hello":
+
+[source,clojure]
+----
+;; hello, are you the one I'm looking for?
+(gen/sample (s/gen (s/and string? #(clojure.string/includes? % "hello"))))
+;; ExceptionInfo Couldn't satisfy such-that predicate after 100 tries.
+----
+
+Given enough time (maybe a lot of time), the generator probably would come up with a string like this, but the underlying `such-that` will make only 100 attempts to generate a value that passes the filter. This is a case where you will need to step in and provide a custom generator.
+
+=== Custom Generators
+
+Building your own generator gives you the freedom to be either narrower and/or be more explicit about what values you want to generate. Alternately, custom generators can be used in cases where conformant values can be generated more efficiently than using a base predicate plus filtering. Spec does not trust custom generators and any values they produce will also be checked by their associated spec to guarantee they pass conformance.
+
+There are three ways to build up custom generators - in decreasing order of preference: 
+
+. Let spec create a generator based on a predicate/spec
+. Create your own generator from the tools in clojure.spec.gen
+. Use test.check or other test.check compatible libraries (like https://github.com/gfredericks/test.chuck[test.chuck])
+
+[WARNING]
+====
+The last option requires a runtime dependency on test.check so the first two options are strongly preferred over using test.check directly.
+====
+
+First consider a spec with a predicate to specify keywords from a particular namespace:
+
+[source,clojure]
+----
+(s/def ::kws (s/and keyword? #(= (namespace %) "my.domain")))
+(s/valid? ::kws :my.domain/name) ;; true
+(gen/sample (s/gen ::kws)) ;; unlikely we'll generate useful keywords this way
+----
+
+The simplest way to start generating values for this spec is to have spec create a generator from a fixed set of options. A set is a valid predicate spec so we can create one and ask for it's generator:
+
+[source,clojure]
+----
+(def kw-gen (s/gen #{:my.domain/name :my.domain/occupation :my.domain/id}))
+(gen/sample kw-gen 5)
+;;=> (:my.domain/occupation :my.domain/occupation :my.domain/name :my.domain/id :my.domain/name)
+----
+
+To redefine our spec using this custom generator, use http://clojure.github.io/clojure/branch-master/clojure.spec-api.html#clojure.spec.gen/with-gen[`with-gen`] which takes a spec and a replacement generator:
+
+[source,clojure]
+----
+(s/def ::kws (s/with-gen (s/and keyword? #(= (namespace %) "my.domain"))
+               #(s/gen #{:my.domain/name :my.domain/occupation :my.domain/id})))
+(s/valid? ::kws :my.domain/name)  ;; true
+(gen/sample (s/gen ::kws))
+;;=> (:my.domain/occupation :my.domain/occupation :my.domain/name  ...)
+----
+
+Note that `with-gen` (and other places that take a custom generator) take a no-arg function that returns the generator, allowing it to be lazily realized.
+
+One downside to this approach is we are missing what property testing is really good at: automatically generating data across a wide search space to find unexpected problems. 
+
+The clojure.spec.gen namespace has a number of functions for generator "primitives" as well as "combinators" for combining them into more complicated generators. 
+
+[NOTE]
+====
+Nearly all of the functions in the clojure.spec.gen namespace are merely wrappers that dynamically load functions of the same name in test.check. You should refer to the documentation for http://clojure.github.io/test.check/[test.check] for more details on how all of the clojure.spec.gen generator functions work.
+====
+
+In this case we want our keyword to have open names but fixed namespaces. There are many ways to accomplish this but one of the simplest is to use http://clojure.github.io/clojure/branch-master/clojure.spec-api.html#clojure.spec.gen/fmap[`fmap`] to build up a keyword based on generated strings:
+
+[source,clojure]
+----
+(def kw-gen-2 (gen/fmap #(keyword "my.domain" %) (gen/string-alphanumeric)))
+(gen/sample kw-gen-2 5)
+;;=> (:my.domain/ :my.domain/ :my.domain/1 :my.domain/1O :my.domain/l9p2)
+----
+
+`gen/fmap` takes a function to apply and a generator. The function will be applied to each sample produced by the generator allowing us to build one generator on another.
+
+However, we can spot a problem in the example above - generators are often designed to return "simpler" values first and any string-oriented generator will often return an empty string which is not a valid keyword. We can make a slight adjustment to omit that particular value using http://clojure.github.io/clojure/branch-master/clojure.spec-api.html#clojure.spec.gen/such-that[`such-that`] which lets us specify a filtering condition:
+
+[source,clojure]
+----
+(def kw-gen-3 (gen/fmap #(keyword "my.domain" %)
+               (gen/such-that #(not= % "")
+                 (gen/string-alphanumeric))))
+(gen/sample kw-gen-3 5)
+;;=> (:my.domain/O :my.domain/b :my.domain/ZH :my.domain/31 :my.domain/U)
+----
+
+Returning to our "hello" example, we now have the tools to make that generator:
+
+[source,clojure]
+----
+(s/def ::hello
+  (s/with-gen #(clojure.string/includes? % "hello")
+    (fn [] (gen/fmap (fn [s] (let [i (rand-int (count s))]
+                               (str (subs s 0 i) "hello" (subs s i)))) 
+             (gen/string-alphanumeric)))))
+(gen/sample (s/gen ::hello))
+;;=> ("hello" "hello" "helloN3" "helloe15" "helloFZx" "hello" "helloA" "CMd9jWhello5" "s5helloL2s4y" "yI2hellokMq")
+----
+
+Here we generate a random string, then insert "hello" at a random index in the string. This utilizes a common trick - generate something random and insert or override the things that will make it conformant.
+
+=== Common Generators
+
+There are some common cases that currently don't have standard predicates, but good generators exist. It's likely there will be changes in this area in the future but for now you might find these useful:
+
+[source,clojure]
+----
+(defn boolean? [x] (instance? Boolean x))
+(s/def ::boolean (s/with-gen boolean? #(gen/boolean)))
+
+(defn uuid? [x] (instance? java.util.UUID x))
+(s/def ::uuid (s/with-gen uuid? #(gen/uuid)))
+----
+
+Another common case is creating a generator that pulls from a range of numbers. For example, if you're creating a spec for a bowling roll, you will need numbers in the range [0,10]. The default generator will generate any integer, then filter down to just numbers in the 0-10 range:
+
+[source,clojure]
+----
+(s/def ::roll (s/and integer? #(>= 0 % 10)))
+(gen/sample (s/gen ::roll))
+;; ExceptionInfo Couldn't satisfy such-that predicate after 100 tries.
+----
+
+One way to handle this is to define the spec as a fixed set of numbers and let spec create the generator:
+
+[source,clojure]
+----
+(s/def ::roll (s/with-gen (s/and integer? #(<= 0 % 10))
+                #(s/gen (set (range 11)))))
+(gen/sample (s/gen ::roll))
+----
+
+But keep in mind that you had to create the fixed set and keep it around - for 0-10 that's not too bad, but for a bigger set that's not desired. Instead we can use http://clojure.github.io/clojure/branch-master/clojure.spec-api.html#clojure.spec.gen/choose[`choose`]:
+
+[source,clojure]
+----
+(s/def ::roll (s/with-gen (s/and integer? #(<= 0 % 10))
+                #(gen/choose 0 10)))
+(gen/sample (s/gen ::roll))
+----
+
+You'll find a lot more insight by learning more about test.check from it's http://clojure.github.io/test.check/intro.html[tutorial] or http://clojure.github.io/test.check/generator-examples.html[examples]. Do keep in mind that while clojure.spec.gen is a large subset of clojure.test.check.generators, not everything is included.
+
 == Wrapping Up
 
-In this guide we have covered most of the features for designing and using specs. In a separate guide we will discuss the use of specs as data generators and for testing.
+In this guide we have covered most of the features for designing and using specs and generators. We expect to add some more advanced generator techniques and help on testing in a future update.
